--- a/_config.yml
+++ b/_config.yml
@@ -1,86 +1,50 @@
-#
-# This file contains configuration flags to customize your site
-#
-
-# Name of your site (displayed in the header)
-name: Sneha Karki
-
-# Short bio or description (displayed in the header)
+# Site settings
+title: Sneha Karki
 description: Web Developer from Somewhere
+author: Sneha Karki
+email: your-email@example.com
+url: "https://your-username.github.io" # change to your GitHub Pages URL
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
+# Theme
+theme: minima
+
+# Social links (footer icons in minima)
+social_links:
+  github: https://github.com/barryclark/jekyll-now
+  twitter: https://twitter.com/jekyllrb
+  linkedin: https://linkedin.com/in/yourusername
+  instagram: https://instagram.com/yourusername
+  facebook: https://facebook.com/yourusername
+  youtube: https://youtube.com/user/yourchannelname
+
+# Avatar/Profile Image
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
-#
-# Flags below are optional
-#
+# Build settings
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+# Plugins
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
 
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: "/blog"
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
+# Permalinks
 permalink: /:title/
 
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
+# Exclude from build
 exclude:
   - Gemfile
   - Gemfile.lock
-  - LICENSE
   - README.md
   - CNAME
+  - LICENSE
+
+# Analytics (optional)
+# google_analytics: UA-XXXXXXXXX-X
+
+# Disqus comments (optional)
+# disqus: your-disqus-shortname
