--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sneha Karki
-description: Web Developer from Somewhere
+description: Temet nosce
 author: Sneha Karki
 email: your-email@example.com
 url: "https://snehaism.github.io/blog/" # ← change this to your actual GitHub Pages URL
